# pre-commit-hooks

./: .pre-commit-hooks.yaml  setup.cfg
pre_commit_hooks/: always_fail.py  always_pass.py  check_invalid_filenames.py  check_invalid_filepaths_branch.py  check_invalid_filetypes.py  util.py
