[metadata]
name = tonejito-pre-commit
version = 0.0.2

[options]
install_requires =
    python-magic~=0.4.27

[options.entry_points]
console_scripts =
    always-pass = pre_commit_hooks.always_pass:main
    always-fail = pre_commit_hooks.always_fail:main
    check-invalid-filenames = pre_commit_hooks.check_invalid_filenames:main
