[metadata]
name = tonejito-pre-commit
version = 0.0.4

[options]
install_requires =
    python-magic~=0.4.27

[options.entry_points]
console_scripts =
    always-pass = pre_commit_hooks.always_pass:main
    always-fail = pre_commit_hooks.always_fail:main
    check-invalid-filenames = pre_commit_hooks.check_invalid_filenames:main
    check-invalid-filetypes = pre_commit_hooks.check_invalid_filetypes:main
    check-invalid-filepaths-branch = pre_commit_hooks.check_invalid_filepaths_branch:main
